<?xml version="1.0"?>
<package>
	<name>xtion_grabber</name>
	<version>0.0.0</version>
	<description>Grabber for the xtion kernel driver</description>

	<maintainer email="max.schwarz@online.de">Max Schwarz</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>nodelet</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>camera_info_manager</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>nodelet</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>camera_info_manager</run_depend>

	<export>
		<nodelet plugin="${prefix}/plugin.xml" />
	</export>
</package>
